ios overflow:hidden bug 5

--- a/main.scss
+++ b/main.scss
@@ -174,7 +174,7 @@ $warning: #3edc99;
     border-radius: 100%;
     color: red;
     border: solid 2px;
-    will-change: transform;
+    will-change: auto;
   }
   
   .sm-circle {
@@ -186,7 +186,7 @@ $warning: #3edc99;
     border: solid 10px;
     border-radius: 100%;
     z-index: -1000;
-    will-change: transform;
+    will-change: auto;
   }
   
   .lg-circle {
@@ -199,7 +199,7 @@ $warning: #3edc99;
     border-radius: 100%;
     overflow: hidden;
     z-index: -100;
-    will-change: transform;
+    will-change: auto;
   }
 
   
@@ -217,7 +217,7 @@ $warning: #3edc99;
     transition: .3s;
     z-index: 1000;
     overflow: hidden;
-    will-change: transform;
+    will-change: auto;
   }
 
   .N {
